--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-<html>
-    <head>
-        <title>Love Running</title>
-    </head>
-    <body>
-        This is the body! OK!!!
-        Khadeeja!
-        <p> my name is Khadeeja</p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Comatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Love Running</title>
+    <!--Favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="assests/favicon/apple-touch-icon.png">
+    <link rel="icon" type="imag/png" sizes="32x32" href="assests/favicon/favicon-32x32.png">
+    <link rel="icon" type="imag/png" sizes="16x16" href="assests/favicon/favicon-16x16.png">
+</head>
+
+<body>
+
+</body>
+
 </html>
