--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assests/favicon/apple-touch-icon.png">
     <link rel="icon" type="imag/png" sizes="32x32" href="assests/favicon/favicon-32x32.png">
     <link rel="icon" type="imag/png" sizes="16x16" href="assests/favicon/favicon-16x16.png">
+    <!--Stylesheet-->
+    <link rel="--Stylesheet--" href="style.css">
 </head>
 
 <body>
