--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="imag/png" sizes="32x32" href="assests/favicon/favicon-32x32.png">
     <link rel="icon" type="imag/png" sizes="16x16" href="assests/favicon/favicon-16x16.png">
     <!--Stylesheet-->
-    <link rel="--Stylesheet--" href="style.css">
+    <link rel="stylesheet" href="assests/css/style.css">
 </head>
 
 <body>
