--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
 </head>
 
 <body>
+    <!--Header-->
     <header>Header</header>
+    <!--main content-->
     <main>Main Content</main>
+    <!--footer-->
     <footer>Footer</footer>
 </body>
 
