--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <!--Header-->
     <header>Header</header>
     <!--main content-->
-    <main>Main Content</main>
+    <main>
+        <section id="hero">
+
+        </section>
+    </main>
     <!--footer-->
     <footer>Footer</footer>
 </body>
