--- a/index.html
+++ b/index.html
@@ -40,7 +40,51 @@
 
     <!-- Main content -->
     <main>
-        <section id="hero"></section>
+        <section id="hero"></section> 
+            <!--section' is a semantic element that enables you to create standalone sections on a web page-->
+        <section id="reasons"><h1>Why Love Running with Us?</h1>
+                <div id="benefits">
+                <div id="benefits-physical">
+                <div>
+                    <h3>Feel Healthy <i class="fa-solid fa-heartbeat"></i></h3>
+
+                    <hr>
+                    <p>
+                        Since it improves aerobic fittness, running is a great way to help improve your cardiovascular health.
+                        Plus, it burns calories and can build strength.</p>
+                    
+                </div>
+
+                    <div>
+                        <h3>
+                            Feel strong <i class="fa-solid fa-dumbell"></i>
+                        </h3>
+                       <!--HR tag in HTML is like a digital ruler or a horizontal line that you can place on a web page to visually separate content.--> 
+                        <hr>
+                        <p> Running strengthens your heart by pumping blood more effectively through your body</p>
+                        </div>
+                     </div> 
+                <div id="benefits-mental">
+                    <!--The <div> tag defines a division or a section in an HTML document. -->
+                    <div>
+                        <h3>
+                            Feel free <i class="fa-brands fa-fly"></i></h3>
+                        <hr>
+                        <p>physical exercise, running include, is known to release endorphins in the brain.
+                            endorphins make you more energetic, more awake and , yes, happier.</p>
+                        
+                    </div>
+                    <div>
+                        <!--The <i> tag in HTML is used to display the content in italic style.-->
+                        <h3>Get social <i class="fa-solid fa-globe"></i></h3>
+                        <hr>
+                        <p>When we run with others, we can run further and faster more easily. Social running can pull you 
+                            out of a running funk or low mood, and inspire you to try new events.</p>
+                         </div>
+                </div>
+
+                </div>
+        </section>
     </main>
 
     <!-- Footer -->
