--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                 </div>
 
                 </div>
+                <div id="benefits-image">
+                    <div id="cicle-cover-bg"><!--The "BG" at the end of the "ID" is a shorthand for "background"--></div>
+                </div>
         </section>
     </main>
 
