--- a/index.html
+++ b/index.html
@@ -39,10 +39,46 @@
     </header>
 
     <!-- Main content -->
-    <main>
-        <section id="hero"></section> 
+    <main> 
+        <section id="signup">
+            <form id="signup-form" method="post" action="https://formdump.codeinstitute.net"> 
+            <h2> <i class="fa-solid fa-heartbeat"></i>Lets get you signed up!</h2>
+            <label for="first-name">First Name</label>
+            <input type="text" name="first-name" id="first-name" class="text-input" required>
+            <br>
+            <label for="last-name">Last-Name</label>
+            <input type="text" name="last-name" id="last-name" class="text-input" required>
+            <br>
+            <label for="email-address">Email Address</label>
+            <input type="email" name="email-address" id="email-address" class="text-input" required>
+            <br>
+            <div class="radio-button">
+                <div>
+                    <label for="road">Road</label>
+                    <input type="radio" name="running-preference" id="road" value="road" required checked>
+                </div>
+                <div>
+                    <label for="trail">Trail</label>
+                    <input type="radio" name="running-preference" id="trail" value="trail" required>
+                </div>
+                <div>
+                    <label for="both">Both</label>
+                    <input type="radio" name="running-preference" id="both" value="both" required>
+                </div> 
+                </div>  
+                <button type="submit" class="join-button">Lets Run!</button> 
+                </form>        
+        </section>
+        </main>
+        <section id="hero">
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Dublin docklands & Phoenix Park</h3>
+            </div>
+            </section>
             <!--section' is a semantic element that enables you to create standalone sections on a web page-->
-        <section id="reasons"><h1>Why Love Running with Us?</h1>
+        <section id="reasons">
+            <h2>Why Love Running with Us?</h2>
                 <div id="benefits">
                 <div id="benefits-physical">
                 <div>
@@ -88,7 +124,9 @@
                     <div id="cicle-cover-bg"><!--The "BG" at the end of the "ID" is a shorthand for "background"--></div>
                 </div>
         </section>
-    </main>
+        <!--M<eetup times section-->
+
+    
 
     <!-- Footer -->
     <footer>
